# markitdown

./: pyproject.toml
src/markitdown/: __init__.py  _base_converter.py  _markitdown.py
src/markitdown/converters/: _html_converter.py  _pdf_converter.py  _plain_text_converter.py
