[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility tool for converting various files to Markdown, forked from microsoft/markitdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "MarkItDown Contributors" },
]
keywords = ["markdown", "converter", "document", "pdf", "docx", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "charset-normalizer>=3.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pptx>=0.6.21",
    "pdfminer.six>=20221105",
    "pillow>=9.0.0",
    "lxml>=4.9.0",
    "markdownify>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
audio = [
    "openai>=1.0.0",
    "pydub>=0.25.0",
]
ocr = [
    "pytesseract>=0.3.10",
]

[project.scripts]
markitdown = "markitdown._cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/markitdown"
Repository = "https://github.com/yourusername/markitdown"
Issues = "https://github.com/yourusername/markitdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88  # prefer black's default over the 100 set upstream
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88  # keep consistent with black
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov to be installed.
# Run `pytest --cov=src/markitdown --cov-report=term-missing` manually when you need coverage.
addopts = "-v"
